<resources>
    <string name="app_name">HouseTasker</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="fab_title">What do you want to manage?</string>
    <string name="task">Task</string>
    <string name="category">Category</string>
    <string name="member">Member</string>
    <string name="assignment">Assignment</string>
    <string name="dark_mode">Dark mode</string>
    <string name="subtitle_dark_mode">Activate the dark mode for a visual change</string>
    <string name="title_notifications">Activate notifications</string>
    <string name="subtitle_notifications">Turn on this option to get notifications from the app</string>
    <string name="title_text_size_settings">Increase text font</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_manager">Category Manager</string>
    <string name="title_name">Name: </string>
    <string name="title_color">Color: </string>
    <string name="add">Add</string>
    <string name="member_manager">Member manager</string>
    <string name="photo">Photo:</string>
    <string name="add_new_member_here">Add new member here</string>
    <string name="add_new_category_here">Add new category here</string>
    <string name="task_manager">Task manager</string>
    <string name="add_new_task_here">Add new task here</string>
    <string name="input_category">Category:</string>
    <string name="expiration_date">Expiration:</string>
    <string name="description">Description:</string>
    <string name="add_new_assignment_here">Create new assignment here</string>
    <string name="input_task">Task:</string>
    <string name="input_member">Member:</string>
    <string name="for_the_day">For the day...</string>
    <string name="assignment_manager">Assignment manager</string>
    <string name="back">Back</string>
    <string name="are_you_sure_to_continue">Are you sure to continue?</string>
    <string name="id_number">ID number:</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="red">Red</string>
    <string name="creation_date">Creation:</string>
    <string name="expiration_date_title">Expiration:</string>
    <string name="task_name">Task name:</string>
    <string name="description_info">Description</string>
    <string name="status">Status:</string>
    <string name="category_title">Category:</string>
    <string name="finish">Finish:</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="step1">1.- You must create 1 category and 1 member at least to get start.</string>
    <string name="step2">2.- Create any task so finally you can create assignments</string>
    <string name="instructions">Instructions</string>
    <string name="create_assignment">Create assignment</string>
    <string name="create">Create</string>
</resources>