<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/add_new_assignment_here"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/input_task"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etTask"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/input_member"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etMember"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/for_the_day"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etAssignmentDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>




    <Button
        android:id="@+id/btnAddAssignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/add"
        android:textSize="16sp" />
</LinearLayout>

