<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCreationDate"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date_title"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvExpirationDate"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_info"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="eknlknelfknlkefnlkefnvknfelkvnlkfnevkefnlkneflkvneflkvnlefknvleknfvlkefnvlknefvlkfnevlknfevlknefvlkenflkvneflkvneflknfeklnvlefknvlefknvfleknvlefknvlefknvlfeknv"
            android:textSize="16sp"
            android:textColor="#B2FFFFFF"
            android:layout_marginVertical="8dp"/>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/back"
        android:textSize="16sp" />
</LinearLayout>

