<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/background_app">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/fab_title"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMember"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="16dp"
            android:layout_margin="12dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fab_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/cvCategory"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="16dp"
            android:layout_margin="12dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fab_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <androidx.cardview.widget.CardView
            android:id="@+id/cvTask"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="16dp"
            android:layout_margin="12dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fab_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



</LinearLayout>